--- a/index.html
+++ b/index.html
@@ -23,30 +23,149 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
+      body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 97vh;
+      }
+      .main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%; 
+        width: 1200px;
+      }
+      .container{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+      .heading{
+        width: 44%;
+        margin: 20px;
+        padding: 50px 60px 50px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+      }
+      .reviews{
+        width: 44%;
+        margin: 20px;
+        padding: 20px 0 20px 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+      }
+      .cards{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+      .card-1, .card-2, .card-3{
+        border-radius: 12px;
+        background-color: hsl(300, 43%, 22%);
+        color: white;
+        height: 30vh;
+        margin: 20px;
+        padding: 20px;
+      }
+      .review-1, .review-2, .review-3{
+        background-color: hsl(300, 24%, 96%);
+        padding: 5px 10px;
+        margin: 10px; 
+        border-radius: 15px;
+        height: 40px;
+        width: 380px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+      }
+      .star{
+        margin: 10px; 
+      }
+      .avatar{
+        border-radius: 50%;
+        height: 50px;
+        width: 50px;
+      }
+      .sml-heading{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: start;
+        height: 70px;
+      }
+      .names{
+        display: flex;
+        flex-direction: column;
+        padding: 0 10px;
+        margin: 0 10px;
+        height: 50px;
+      }
     </style>
   </head>
   <body>
     <div class="main">
       <div class="container">
         <div class="heading">
-          <h1>10,000+ of our users love our products.</h1>
+          <span style="color: hsl(300, 43%, 22%); font-size: 3em; font-weight: bold;">10,000+ of our users love our products.</span>
 
-          <p><span>We only provide great products combined with excellent customer service.
+          <p><span style="color: hsl(303, 10%, 53%)">We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.</span></p>
         </div>
         <div class="reviews">
-          <h3><span style="color: black;">Rated 5 Stars in Reviews</span></h3>
-          <h3><span style="color: black;">Rated 5 Stars in Report Guru</span></h3>
-          <h3><span style="color: black;">Rated 5 Stars in BestTech</span></h3>
+          <div class="review-1">
+           <div class="star">
+             <img src="./images/icon-star.svg">
+             <img src="./images/icon-star.svg">
+             <img src="./images/icon-star.svg">
+             <img src="./images/icon-star.svg">
+             <img src="./images/icon-star.svg">
+           </div>
+            <span style="color: hsl(300, 43%, 22%)">
+            <h3>5 Stars in Reviews</h3>
+            </span>
+          </div>
+          <div class="review-2">
+             <div class="star">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+             </div>
+             <span style="color: hsl(300, 43%, 22%)">
+             <h3>Rated 5 Stars in Report Guru</h3>
+             </span>
+          </div>
+          <div class="review-3">
+             <div class="star">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+              </div>
+              <span style="color: hsl(300, 43%, 22%)">
+              <h3>Rated 5 Stars in BestTech</h3>
+              </span>
+          </div>
         </div>
       </div>
       <div class="cards">
         <div class="card-1">
-          <div class="sml-headding">
-            <img>
+          <div class="sml-heading">
             <div>
-              <h3><span>Colton Smith</span></h3>
-              <h3><span>Verified Buyer</span></h3>
+            <img class="avatar" src="./images/image-colton.jpg">
+            </div>  
+            <div class="names">
+              <span style="font-size: 20px;">Colton Smith</span>
+              <span style="font-size: 20px;">Verified Buyer</span>
             </div>
           </div>
           <p>"We needed the same printed design as the one we had ordered a week prior.
@@ -56,10 +175,12 @@
 
         <div class="card-2">
           <div class="sml-heading">
-            <img>
             <div>
-              <h3><span>Irene Roberts</span></h3>
-              <h3><span>Verified Buyer</span></h3>
+            <img class="avatar" src="./images/image-irene.jpg">
+            </div>
+            <div class="names">
+              <span style="font-size: 20px;">Irene Roberts</span>
+              <span style="font-size: 20px;">Verified Buyer</span>
             </div>
           </div>
           <p>"Customer service is always excellent and very quick turn around. Completely
@@ -68,10 +189,12 @@
         
         <div class="card-3">
           <div class="sml-heading">
-            <img>
             <div>
-              <h3><span>Anne Wallace</span></h3> 
-              <h3><span>Verified Buyer</span></h3>
+            <img class="avatar" src="./images/image-anne.jpg">
+            </div>
+            <div class="names">
+              <span style="font-size: 20px;">Anne Wallace</span> 
+              <span style="font-size: 20px;">Verified Buyer</span>
             </div>
           </div>
           <p>"Put an order with this company and can only praise them for the very high
@@ -82,9 +205,8 @@
    </div>
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+       Coded by <a href="https://www.linkedin.com/in/tushar-sharma-b551ba345/" target="_blank">Tushar</a>.
     </div>
   </body>
 </html>
