--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
+      @media (max-width: 1100px){
+        .main{
+          width: 50%;
+        }
+        .container{
+          flex-wrap: wrap;
+        }
+        .cards{
+          flex-wrap: wrap;
+          width: 50%;
+        }
+        .reviews{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+        }
+      }
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -28,14 +46,16 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 97vh;
+        height: 100%;
+        background-image: url(./images/bg-pattern-top-desktop.svg), url(./images/bg-pattern-bottom-desktop.svg);
+        background-position: top left, bottom right;
+        background-repeat: no-repeat;
       }
       .main{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 100%; 
         width: 1200px;
       }
       .container{
@@ -61,6 +81,7 @@
         align-items: end;
       }
       .cards{
+        min-width: 50%;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -73,6 +94,8 @@
         height: 30vh;
         margin: 20px;
         padding: 20px;
+        max-height: 250px;
+        max-width: 400px;
       }
       .review-1, .review-2, .review-3{
         background-color: hsl(300, 24%, 96%);
